ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-10-30 Daniel Andreca
	- GUI:
		* Reseller with disabled resources (disabled email) cannot be edited (with same resouces remaining disabled)

2008-11-02 Benedikt Heintel
	- LANGUAGES:
		* Updated: Italian

2008-10-30 Daniel Andreca
	- GUI:
		* Fixed #1536: CentOS - ISPCP fails to install

2008-10-25 Daniel Andreca
	- GUI:
		* Fixed #1550: Subdomain with existing mountpoint not possible

2008-10-19 Benedikt Heintel
	- GUI:
		* Fixed #1515: Security issue, login reveals whether a username is valid
		* Fixed #1561: Show mail-forwarding-target in overview

2008-10-18 Daniel Andreca
	- ENGINE:
		* Restoring active folder creation for subdomains
		* Fixed #1080: Active web folders should not be deletable by customer; alias subdomains implementation
		* Fixed #1562: Carriage returns in awstats_buildstaticpages.pl
		* Fixed #1469: Postmaster email address didn't created

2008-10-16 Benedikt Heintel
	- CONFIGS:
		* Added Mailsize function
	- DISTS:
		* Fixed #1549: (CentOS) More perl dependencies on CentOS
		* Fixed #1559: (CentOS) CentOS perl docs: Advice to autoconfigure first
	- DOCS:
		* Fixed #1483: Misleading information in INSTALL-files
	- ENGINE:
		* Fixed #1512: Subdomains for domain-aliases
		* Fixed #1509: New subdomain management system
	- GUI:
		* Fixed Order delete bug
		* Fixed #1507: Some errors on around "Execute Query" option on a database
		* Fixed #1511: e-mail aliases & autoreply
		* Fixed #1151: Update Hosting Package should only visible for a customer if a hosting plan to update is available (thanks Feg)
		* Fixed #1556: Special Characters like Umlauts (äüöÄÜÖ) and Ligatures (ß) in Javascript messages are encoded, wrongly.
	- TOOLS:
		* PHPmyAdmin 3.0.0

2008-09-11 Daniel Andreca
	- GUI:
		* Fixed #1151: Update Hosting Package should only visible for a customer if a hosting plan to update is available (thanks Feg)
	- CONFIGS:
		* Fixed #971: Why i can't set the IPs of a domain? (thanks Feg)