@@ -156,7 +156,7 @@ PHP_VERSION = 5
 # ProFTPd data
 #
 
-FTPD_CONF_FILE = /etc/proftpd.conf
+FTPD_CONF_FILE = /etc/proftpd/proftpd.conf
 
 FTPD_CONF_DIR = /etc/proftpd/ispcp
 
