@@ -45,7 +45,7 @@ TimeoutStalled             600
 TimeoutIdle                1200
 
 DisplayLogin               welcome.msg
-DisplayFirstChdir          message
+DisplayChdir          message
 
 ListOptions                "-l"
 #LsDefaultOptions           "-l"
