@@ -1,7 +1,11 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-2008-10-30 Daniel Andreca
+2008-11-09 Daniel Andreca
+	- CONFIGS:
+		* Fixed #1283: FTP Wrong password
+
+2008-11-04 Daniel Andreca
 	- GUI:
 		* Reseller with disabled resources (disabled email) cannot be edited (with same resouces remaining disabled)
 
